--- a/ServiceAnalyzer.WebService/appsettings.json
+++ b/ServiceAnalyzer.WebService/appsettings.json
@@ -1,8 +1,8 @@
 {
   "ConfigurationOption": {
-    "ConnectionString": "DbConnectionString",
+    "ConnectionString": "Data Source=mastersoftazrdatabase.westeurope.cloudapp.azure.com;Initial Catalog=MstMonitoraggioTest;User ID=sa;Password=adm69252891",
     "LogDaysBackup": 90,
-    "BdmonitorAddress": "origin address" 
+    "BdmonitorAddress": "http://localhost:14073"
   },
   "Logging": {
     "LogLevel": {
