CORS multiple origin

--- a/ServiceAnalyzer.WebService/appsettings.json
+++ b/ServiceAnalyzer.WebService/appsettings.json
@@ -1,8 +1,7 @@
 {
   "ConfigurationOption": {
-    "ConnectionString": "Data Source=mastersoftazrdatabase.westeurope.cloudapp.azure.com;Initial Catalog=MstMonitoraggioTest;User ID=sa;Password=adm69252891",
-    "LogDaysBackup": 90,
-    "BdmonitorAddress": "http://localhost:14073"
+    "ConnectionString": "Data Source=mastersoftazrdatabase.westeurope.cloudapp.azure.com;Initial Catalog=MstMonitoraggioTest;TrustServerCertificate=true;User ID=mastersoft;Password=mst23!",
+    "LogDaysBackup": 90
   },
   "Logging": {
     "LogLevel": {
